Fix Player Name bug
The bug was the names were not aligned correctly when you type a name in. This PR fixes that issue.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -39,6 +39,7 @@ body {
       font-size: 1.5rem;
       padding: 0;
       margin: 0;
+      text-align: center;
     }
     input::placeholder {
       text-align: center;
@@ -98,6 +99,7 @@ body {
       width: 100px;
       user-select: none;
       transition: background 200ms ease-in-out;
+      font-size: 2rem;
       &:hover {
         background: tan;
       }
